--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -4,5 +4,16 @@
 * {
   box-sizing: border-box;
   position: relative;
-  font-size: 30px;
+}
+
+body {
+  margin: 0;
+}
+
+section {
+  padding: 50px 0
+}
+
+.content {
+  margin: 0 40px;
 }
