--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,5 +1,7 @@
 @import "breakpoints";
+@import "fonts";
 @import "grid";
+@import "typography";
 
 * {
   box-sizing: border-box;
@@ -16,12 +18,4 @@ section {
 
 .content {
   margin: 0 40px;
-}
-
-h1 {
-  margin: 0 0 1.2rem;
-}
-
-p {
-  margin: 0 0 1.2rem;
 }
