feat: define main structure

--- a/src/components/projects.module.scss
+++ b/src/components/projects.module.scss
@@ -1,8 +1,8 @@
-.description {
-  grid-column: 6/13;
+.section-copy {
+  grid-column: 7/13;
 }
 
 .digital-art {
   background-color: fuchsia;
-  grid-column: 1/6;
+  grid-column: 1/7;
 }
