--- a/src/components/skills.module.scss
+++ b/src/components/skills.module.scss
@@ -1,8 +1,8 @@
-.description {
-  grid-column: 1/8;
+.section-copy {
+  grid-column: 1/7;
 }
 
 .digital-art {
   background-color: coral;
-  grid-column: 8/13;
+  grid-column: 7/13;
 }
