--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -1,7 +1,6 @@
-body {
+html, body {
   color: black;
   font-family: 'Roboto Slab', sans-serif;
-  font-size: 18px;
   line-height: 1.5;
 }
 
@@ -11,4 +10,20 @@ h1 {
 
 p {
   margin: 0 0 1.2rem;
+}
+
+.section-headline {
+  font-size: 3rem;
+}
+
+.section-intro {
+  font-size: 1.25rem;
+}
+
+.main-section-copy.center {
+  text-align: center;
+}
+
+.main-section-copy.right {
+  text-align: right;
 }
