--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -12,10 +12,18 @@ body {
   margin: 0;
 }
 
-section {
-  padding: 20px 0
+.content {
+  margin: 0 2.5rem;
 }
 
-.content {
-  margin: 0 40px;
+.main-section-copy {
+  padding: 6rem 0 6rem 3rem;
+}
+
+.main-section-copy.center {
+  padding: 6rem 1.5rem 6rem 1.5rem;
+}
+
+.main-section-copy.right {
+  padding: 6rem 3rem 6rem 0;
 }
