--- a/src/components/nav-bar.module.scss
+++ b/src/components/nav-bar.module.scss
@@ -1,7 +1,11 @@
 #nav-bar {
   display: flex;
+  z-index: 100;
   justify-content: space-between;
   align-items: center;
+  position: sticky;
+  top: 0;
+  background-color: white;
 }
 
 .logo {
