--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -12,6 +12,11 @@ p {
   margin: 0 0 1.2rem;
 }
 
+.small-text {
+  font-size: 0.8rem;
+  margin: 0;
+}
+
 .section-headline {
   font-size: 3rem;
 }
