--- a/src/assets/style/_breakpoints.scss
+++ b/src/assets/style/_breakpoints.scss
@@ -1,5 +1,17 @@
+@mixin desktop {
+  @media (min-width: 1024px) and (max-width: 1220px) {
+    @content;
+  }
+}
+
+@mixin desktop-xl {
+  @media (min-width: 1221px) {
+    @content;
+  }
+}
+
 @mixin tablet {
-  @media (max-width: 1023px) {
+  @media (min-width: 768px) and (max-width: 1023px) {
     @content;
   }
 }
