--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -1,15 +1,21 @@
 html, body {
   color: black;
-  font-family: 'Roboto Slab', sans-serif;
+  font-family: 'Roboto', sans-serif;
   line-height: 1.5;
+}
+
+h1, header {
+  font-family: 'WorkSans', sans-serif;
 }
 
 h1 {
   margin: 0 0 1.2rem;
+  font-weight: 900;
 }
 
 p {
   margin: 0 0 1.2rem;
+  font-weight: 300;
 }
 
 .small-text {
