--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -1,9 +1,18 @@
 footer {
-  height: 2.8rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-bottom: 1.5rem;
+  background-color: pink;
+}
+
+.icon {
+  height: 1rem;
+  width: 100%;
+  margin-left: 1rem;
+}
+
+.info, .social-media {
+  padding: 0.5rem 0;
 }
 
 .social-media {
@@ -11,6 +20,5 @@ footer {
 }
 
 .social-media img {
-  margin-left: 1rem;
   width: 1rem;
 }
