--- a/src/components/nav-bar.module.scss
+++ b/src/components/nav-bar.module.scss
@@ -5,7 +5,11 @@
   align-items: center;
   position: sticky;
   top: 0;
-  background-color: white;
+  background-color: pink;
+}
+
+h3, ul {
+  margin: 0.5rem 0;
 }
 
 .logo {
