--- a/src/assets/style/_fonts.scss
+++ b/src/assets/style/_fonts.scss
@@ -1,54 +1,47 @@
 @font-face {
-  font-family: 'WorkSans';
-  src: url('../fonts/WorkSans-VariableFont_wght.woff2') format('woff2');
-  font-weight: 1 999;
-  font-style: normal;
-}
-
-@font-face {
   font-display: swap;
-  font-family: 'Roboto';
+  font-family: 'Yantramanav';
   font-weight: 100;
   font-style: normal;
-  src: url('../fonts/Roboto-Thin.woff2') format('woff2');
+  src: url('../fonts/Yantramanav-Thin.woff2') format('woff2');
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'Roboto';
+  font-family: 'Yantramanav';
   font-weight: 300;
   font-style: normal;
-  src: url('../fonts/Roboto-Light.woff2') format('woff2');
+  src: url('../fonts/Yantramanav-Light.woff2') format('woff2');
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'Roboto';
+  font-family: 'Yantramanav';
   font-weight: 400;
   font-style: normal;
-  src: url('../fonts/Roboto-Regular.woff2') format('woff2');
+  src: url('../fonts/Yantramanav-Regular.woff2') format('woff2');
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'Roboto';
+  font-family: 'Yantramanav';
   font-weight: 500;
   font-style: normal;
-  src: url('../fonts/Roboto-Medium.woff2') format('woff2');
+  src: url('../fonts/Yantramanav-Medium.woff2') format('woff2');
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'Roboto';
+  font-family: 'Yantramanav';
   font-weight: 700;
   font-style: normal;
-  src: url('../fonts/Roboto-Bold.woff2') format('woff2');
+  src: url('../fonts/Yantramanav-Bold.woff2') format('woff2');
 }
 
 @font-face {
   font-display: swap;
-  font-family: 'Roboto';
+  font-family: 'Yantramanav';
   font-weight: 900;
   font-style: normal;
-  src: url('../fonts/Roboto-Black.woff2') format('woff2');
+  src: url('../fonts/Yantramanav-Black.woff2') format('woff2');
 }
