feat(style): add variables

--- a/src/components/nav-bar.module.scss
+++ b/src/components/nav-bar.module.scss
@@ -5,7 +5,8 @@
   align-items: center;
   position: sticky;
   top: 0;
-  background-color: pink;
+  background-color: var(--blue);
+  color: var(--white);
 }
 
 h3, ul {
