--- a/src/components/hero.module.scss
+++ b/src/components/hero.module.scss
@@ -5,7 +5,7 @@
 .hero-title-card {
   align-self: center;
   grid-column: 1/6;
-  border: 0.5rem solid pink;
+  border: 0.5rem solid var(--blue);
   border-radius: 0.5rem;
 }
 
@@ -24,5 +24,5 @@
 .floor {
   height: 1rem;
   width: 100%;
-  background-color: #F6D8C7;
+  background-color: var(--flesh);
 }
