feat: reorganise hero component

--- a/src/assets/style/_fonts.scss
+++ b/src/assets/style/_fonts.scss
@@ -1,5 +1,13 @@
 @font-face {
   font-display: swap;
+  font-family: 'Sixtyfour';
+  font-weight: 1 999;
+  font-style: normal;
+  src: url('../fonts/Sixtyfour[wdth,wght].woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
   font-family: 'Yantramanav';
   font-weight: 100;
   font-style: normal;
