--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -2,7 +2,14 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: pink;
+  background-color: var(--blue);
+  color: var(--white);
+}
+
+footer a {
+  text-decoration: none;
+  font-weight: bold;
+  color: inherit;
 }
 
 .icon {
