feat(hero): apply new changes

--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -3,7 +3,7 @@
   --white: #fff;
   --dark: #262132;
   --grey: #A09BAB;
-  --flesh: #F6D8C7;
   --pink: #E995D2;
+  --coral: lightpink;
   --blue: #356EC2;
 }
