--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -12,13 +12,19 @@ footer a {
   color: inherit;
 }
 
+.signature {
+  font-size: 0.8rem;
+  margin: 0;
+}
+
 .icon {
   height: 1rem;
   width: 100%;
   margin-left: 1rem;
 }
 
-.info, .social-media {
+.info,
+.social-media {
   padding: 0.5rem 0;
 }
 
