--- a/src/components/text-box.module.scss
+++ b/src/components/text-box.module.scss
@@ -3,8 +3,16 @@
 }
 
 #text-box h1 {
-  font-family: 'Sixtyfour', sans-serif;
-  font-weight: 450;
-  font-size: 2.5rem;
   color: var(--pink);
+}
+
+.text-content {
+  font-weight: 400;
+  font-size: 1.3rem;
+}
+
+.text-content a {
+  text-decoration: none;
+  font-weight: bold;
+  color: inherit;
 }
