--- a/src/components/carousel.module.scss
+++ b/src/components/carousel.module.scss
@@ -5,7 +5,7 @@
 }
 
 #slider-container {
-  height: 25rem;
+  height: 38rem;
   width: 100%;
 }
 
@@ -13,7 +13,7 @@
   margin: 0 0.8rem;
   position: absolute;
   top: 50%;
-  z-index: 99;
+  z-index: var(--arrow);
   height: 30px;
   width: 20px;
 }
@@ -51,15 +51,24 @@
 }
 
 .slide[data-position="0"]{
-  background-color: lightblue;
+  background-image: url("../static/img/slide-0.svg");
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position: center bottom;
 }
 
 .slide[data-position="1"]{
-  background-color: plum;
+  background-image: url("../static/img/slide-1.svg");
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position: center bottom;
 }
 
 .slide[data-position="2"]{
-  background-color: lightgreen;
+  background-image: url("../static/img/slide-2.svg");
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position: center bottom;
 }
 
 #bullets-menu-container{
