--- a/src/components/contact.module.scss
+++ b/src/components/contact.module.scss
@@ -6,15 +6,9 @@
   color: var(--blue);
 }
 
-.digital-art {
+.image-section {
   grid-column: 7/13;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.placeholder {
-  background-color: var(--pink);
-  width: 20rem;
-  height: 20rem;
 }
