--- a/src/components/middle-section.module.scss
+++ b/src/components/middle-section.module.scss
@@ -1,3 +1,5 @@
+@import "../assets/style/breakpoints";
+
 #middle-section {
   width: 100%;
   background-color: var(--blue);
@@ -15,4 +17,24 @@
   margin: 10rem 0;
   display: flex;
   align-items: flex-start;
+}
+
+@include tablet {
+  .carousel-wrapper {
+    grid-column: 1/6;
+  }
+
+  .text-wrapper {
+    grid-column: 1/6;
+  }
+}
+
+@include mobile {
+  .carousel-wrapper {
+    grid-column: 1/2;
+  }
+
+  .text-wrapper {
+    grid-column: 1/2;
+  }
 }
