--- a/src/components/nav-bar.module.scss
+++ b/src/components/nav-bar.module.scss
@@ -1,12 +1,13 @@
+@import "../assets/style/breakpoints";
+
 #nav-bar {
-  display: flex;
   z-index: var(--nav-bar);
-  justify-content: space-between;
   align-items: center;
   position: sticky;
   top: 0;
   background-color: var(--blue);
   color: var(--white);
+  grid-column: 1/13;
 }
 
 h3, ul {
@@ -14,7 +15,8 @@ h3, ul {
 }
 
 .logo {
-  display: inline-block;
+  grid-column: 1/6;
+  justify-self: start;
 }
 
 #nav-bar a {
@@ -25,9 +27,35 @@ h3, ul {
 .menu {
   list-style: none;
   float: right;
+  justify-self: end;
+  grid-column: 8/13;
+}
+
+#nav-bar ul {
+  padding-inline-start: 0;
 }
 
 #nav-bar li {
   display: inline-block;
   margin-left: 1rem;
+}
+
+@include tablet {
+  .logo {
+    grid-column: 1/4;
+  }
+
+  .menu {
+    grid-column: 4/7;
+  }
+}
+
+@include mobile {
+  .logo {
+    grid-column: 1/2;
+  }
+
+  .menu {
+    grid-column: 2/3;
+  }
 }
