--- a/src/components/contact.module.scss
+++ b/src/components/contact.module.scss
@@ -9,7 +9,7 @@
 }
 
 .image-section {
-  grid-column: 7/13;
+  grid-column: 8/13;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,20 +17,24 @@
 
 @include tablet {
   .section-copy {
-    grid-column: 1/6;
+    padding: 5rem 0 3rem;
+    grid-column: 1/7;
   }
 
   .image-section {
-    grid-column: 1/6;
+    padding-bottom: 5rem;
+    grid-column: 1/7;
   }
 }
 
 @include mobile {
   .section-copy {
-    grid-column: 1/2;
+    padding: 5rem 0 4rem;
+    grid-column: 1/3;
   }
 
   .image-section {
-    grid-column: 1/2;
+    grid-column: 1/3;
+    padding-bottom: 7rem;
   }
 }
