--- a/src/components/middle-section.module.scss
+++ b/src/components/middle-section.module.scss
@@ -4,6 +4,7 @@
   width: 100%;
   background-color: var(--blue);
   background-image: linear-gradient(var(--blue), var(--pink));
+  grid-column: 1/13;
 }
 
 .carousel-wrapper {
@@ -21,20 +22,21 @@
 
 @include tablet {
   .carousel-wrapper {
-    grid-column: 1/6;
+    grid-column: 1/7;
   }
 
   .text-wrapper {
-    grid-column: 1/6;
+    margin: 3rem 0;
+    grid-column: 1/7;
   }
 }
 
 @include mobile {
   .carousel-wrapper {
-    grid-column: 1/2;
+    grid-column: 1/3;
   }
 
   .text-wrapper {
-    grid-column: 1/2;
+    grid-column: 1/3;
   }
 }
