--- a/src/components/contact.module.scss
+++ b/src/components/contact.module.scss
@@ -29,12 +29,20 @@
 
 @include mobile {
   .section-copy {
-    padding: 5rem 0 4rem;
+    padding: 3rem 0 2rem;
     grid-column: 1/3;
+  }
+
+  .section-copy h1 {
+    font-size: 2rem;
+  }
+
+  .section-copy p {
+    font-size: 1rem;
   }
 
   .image-section {
     grid-column: 1/3;
-    padding-bottom: 7rem;
+    padding-bottom: 4rem;
   }
 }
