--- a/src/components/hero.module.scss
+++ b/src/components/hero.module.scss
@@ -1,10 +1,9 @@
 @import "../assets/style/breakpoints";
 
 #hero {
-  margin-top: 7rem;
   background-image: url("../static/img/home.svg");
   background-repeat: no-repeat;
-  background-size: auto 100%;
+  background-size: auto 80%;
   background-position: center bottom;
   height: 35rem;
   grid-column: 1/13;
@@ -15,9 +14,10 @@
 }
 
 .hero-title {
-  grid-column: 3/9;
-  width: 30rem;
-  top: 2.5rem;
+  justify-self: center;
+  grid-column: 1/13;
+  width: 26.5rem;
+  top: 5rem;
 }
 
 .hero-title h1 {
@@ -39,9 +39,10 @@
   }
 
   .hero-title {
-    grid-column: 2/5;
+    justify-self: center;
+    grid-column: 2/6;
     width: 24rem;
-    top: 8.5rem;
+    top: 6rem;
   }
 
   .hero-title h1 {
@@ -51,17 +52,18 @@
 
 @include mobile {
   #hero {
-    margin-top: -9rem;
-    background-size: auto 60%;
+    margin-top: -17rem;
+    background-size: auto 40%;
   }
 
   .hero-title {
-    grid-column: 1/2;
-    width: 17rem;
-    top: 13rem;
+    justify-self: center;
+    grid-column: 1/3;
+    width: 12rem;
+    top: 20.5rem;
   }
 
   .hero-title h1 {
-    font-size: 1.4rem;
+    font-size: 1rem;
   }
 }
