--- a/src/components/middle-section.module.scss
+++ b/src/components/middle-section.module.scss
@@ -2,6 +2,7 @@
 
 #middle-section {
   width: 100%;
+  height: 45rem;
   background-color: var(--blue);
   background-image: linear-gradient(var(--blue), var(--pink));
   grid-column: 1/13;
@@ -13,9 +14,8 @@
 }
 
 .text-wrapper {
-  height: 100%;
   grid-column: 7/13;
-  margin: 10rem 0;
+  margin: 10rem 0 10rem 1rem;
   display: flex;
   align-items: flex-start;
 }
