--- a/src/components/carousel.module.scss
+++ b/src/components/carousel.module.scss
@@ -7,6 +7,10 @@
 }
 
 #slider-container {
+  background-image: url("../static/img/base.svg");
+  background-repeat: no-repeat;
+  background-size: auto 70%;
+  background-position: center bottom;
   height: 38rem;
   width: 100%;
 }
@@ -39,7 +43,7 @@
 
 .slides {
   width: 100%;
-  height: 100%;
+  height: 93.9%;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
@@ -53,21 +57,21 @@
 }
 
 .slide[data-position="0"]{
-  background-image: url("../static/img/slide-0.svg");
+  background-image: url("../static/img/ladder.svg");
   background-repeat: no-repeat;
   background-size: auto 100%;
   background-position: center bottom;
 }
 
 .slide[data-position="1"]{
-  background-image: url("../static/img/slide-1.svg");
+  background-image: url("../static/img/projects.svg");
   background-repeat: no-repeat;
   background-size: auto 100%;
   background-position: center bottom;
 }
 
 .slide[data-position="2"]{
-  background-image: url("../static/img/slide-2.svg");
+  background-image: url("../static/img/skills.svg");
   background-repeat: no-repeat;
   background-size: auto 100%;
   background-position: center bottom;
