--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -19,6 +19,11 @@ p {
   font-size: 1.2rem;
 }
 
+li {
+  font-weight: 400;
+  font-size: 1.2rem;
+}
+
 a {
   text-decoration: none;
   font-weight: bold;
