--- a/src/components/carousel.module.scss
+++ b/src/components/carousel.module.scss
@@ -55,21 +55,27 @@
   width: 100%;
   height: 100%;
   flex-shrink: 0;
+}
+
+.slide[data-position="0"]{
+  background-image: url("../static/img/ladder.svg");
   background-repeat: no-repeat;
   background-size: auto 100%;
   background-position: center bottom;
 }
 
-.slide[data-position="0"]{
-  background-image: url("../static/img/ladder.svg");
-}
-
 .slide[data-position="1"]{
   background-image: url("../static/img/projects.svg");
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position: center bottom;
 }
 
 .slide[data-position="2"]{
   background-image: url("../static/img/skills.svg");
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+  background-position: center bottom;
 }
 
 #bullets-menu-container{
