--- a/src/components/carousel.module.scss
+++ b/src/components/carousel.module.scss
@@ -83,6 +83,14 @@
   background-image: url("../static/img/skills.svg");
 }
 
+.slide[data-position="1"].mobile {
+  background-image: url("../static/img/projects-mobile.svg");
+}
+
+.slide[data-position="2"].mobile {
+  background-image: url("../static/img/skills-mobile.svg");
+}
+
 #bullets-menu-container{
   height: 3rem;
   display: flex;
