--- a/src/components/carousel.module.scss
+++ b/src/components/carousel.module.scss
@@ -15,10 +15,6 @@
   width: 100%;
 }
 
-#slider-container.mobile {
-  background-image: url("../static/img/base-mobile.svg");
-}
-
 #carousel-container button {
   background: none;
   color: inherit;
@@ -83,14 +79,6 @@
   background-image: url("../static/img/skills.svg");
 }
 
-.slide[data-position="1"].mobile {
-  background-image: url("../static/img/projects-mobile.svg");
-}
-
-.slide[data-position="2"].mobile {
-  background-image: url("../static/img/skills-mobile.svg");
-}
-
 #bullets-menu-container{
   height: 3rem;
   display: flex;
@@ -115,4 +103,18 @@
 
 .bullet.active {
   background-color: var(--blue);
+}
+
+@include mobile {
+  #slider-container {
+    background-image: url("../static/img/base-mobile.svg");
+  }
+
+  .slide[data-position="1"] {
+    background-image: url("../static/img/projects-mobile.svg");
+  }
+
+  .slide[data-position="2"] {
+    background-image: url("../static/img/skills-mobile.svg");
+  }
 }
