--- a/src/components/hero.module.scss
+++ b/src/components/hero.module.scss
@@ -1,7 +1,7 @@
-@import "../assets/style/breakpoints";
+@import '../assets/style/breakpoints';
 
 #hero {
-  background-image: url("../static/img/home.svg");
+  background-image: url('../static/img/home.svg');
   background-repeat: no-repeat;
   background-size: auto 80%;
   background-position: center bottom;
