refactor: projects images as png

--- a/src/components/carousel.module.scss
+++ b/src/components/carousel.module.scss
@@ -72,7 +72,7 @@
 }
 
 .slide[data-position='1'] {
-  background-image: url('../static/img/projects.svg');
+  background-image: url('../static/img/projects.png');
 }
 
 .slide[data-position='2'] {
@@ -111,7 +111,7 @@
   }
 
   .slide[data-position='1'] {
-    background-image: url('../static/img/projects-mobile.svg');
+    background-image: url('../static/img/projects-mobile.png');
   }
 
   .slide[data-position='2'] {
