--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -1,13 +1,14 @@
 html,
 body {
   color: var(--dark);
-  font-family: "Yantramanav", sans-serif;
-  line-height: 1.5;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  line-height: 1.6;
 }
 
 h1 {
-  margin: 0 0 1.5rem;
-  font-family: "Sixtyfour", sans-serif;
+  margin: 0 0 2rem;
+  font-family: 'Sixtyfour', sans-serif;
   font-weight: 450;
   line-height: 1.2;
   font-size: 2.2rem;
@@ -16,7 +17,7 @@ h1 {
 p {
   margin: 0;
   font-weight: 400;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 li {
